# comparison_embeddings

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: amazon.parquet
notebooks/: amazon_review.ipynb  create_db.py  csv_to_parquet.ipynb  db.sql  embeddings.ipynb  pca.ipynb
