[project]
name = "comparison-embeddings"
version = "0.1.0"
description = ""
authors = [
    {name = "jeremistderechte",email = "jeremy.barenkamp@web.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.23.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "pgvector (>=0.4.0,<0.5.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "dynaconf (>=3.2.10,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
